fix Add Existing User so that all the typeahead dropdown is visible

--- a/src/css/languageforge/default/lf.css
+++ b/src/css/languageforge/default/lf.css
@@ -849,7 +849,11 @@ td.container > div { width: 100%; height: 20px; overflow:hidden; }
 
 /* New Item under ribbon bar */
 div.new-item form {
-	margin: 20px 0 0 0;
+	margin: 20px 0 20px 0;
+}
+
+div.new-item.collapse.in {
+	overflow: visible;
 }
 
 .activity-date {
